WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
121353
CTTE: RenderRubyAs{Block,Inline} are never anonymous.
https://bugs.webkit.org/show_bug.cgi?id=121353
Summary
CTTE: RenderRubyAs{Block,Inline} are never anonymous.
Andreas Kling
Reported
2013-09-14 00:55:58 PDT
CTTE: RenderRubyAs{Block,Inline} are never anonymous.
Attachments
Patch
(5.23 KB, patch)
2013-09-14 00:56 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2013-09-14 00:56:40 PDT
Created
attachment 211631
[details]
Patch
Andreas Kling
Comment 2
2013-09-14 02:12:46 PDT
Comment on
attachment 211631
[details]
Patch Clearing flags on attachment: 211631 Committed
r155760
: <
http://trac.webkit.org/changeset/155760
>
Andreas Kling
Comment 3
2013-09-14 02:12:53 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug