CTTE: RenderRubyAs{Block,Inline} are never anonymous. <https://webkit.org/b/121353>

Reviewed by Darin Adler.

Replace element() with existingElement() and spam class with OVERRIDE.
Removed bogus removeLeftoverAnonymousBlock() override in RenderRubyAsInline
since it didn't override anything from a parent class.

Canonical link: https://commits.webkit.org/139317@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155760 268f45cc-cd09-0410-ab3c-d52691b4dbfc