Source/WebCore/rendering/RenderRuby.cpp
@@ -109,8 +109,8 @@ static inline RenderRubyRun* findRubyRunParent(RenderObject* child)
 
 //=== ruby as inline object ===
 
-RenderRubyAsInline::RenderRubyAsInline(Element* element)
-    : RenderInline(element)
+RenderRubyAsInline::RenderRubyAsInline(Element& element)
+    : RenderInline(&element)
 {
 }
 
@@ -215,8 +215,8 @@ void RenderRubyAsInline::removeChild(RenderObject* child)
 
 //=== ruby as block object ===
 
-RenderRubyAsBlock::RenderRubyAsBlock(Element* element)
-    : RenderBlockFlow(element)
+RenderRubyAsBlock::RenderRubyAsBlock(Element& element)
+    : RenderBlockFlow(&element)
 {
 }
 
