Source/WebCore/rendering/RenderRuby.h
@@ -53,39 +53,42 @@ namespace WebCore {
 // <ruby> when used as 'display:inline'
 class RenderRubyAsInline FINAL : public RenderInline {
 public:
-    RenderRubyAsInline(Element*);
+    explicit RenderRubyAsInline(Element&);
     virtual ~RenderRubyAsInline();
 
-    virtual void addChild(RenderObject* child, RenderObject* beforeChild = 0);
-    virtual void removeChild(RenderObject* child);
+    virtual void addChild(RenderObject* child, RenderObject* beforeChild = 0) OVERRIDE;
+    virtual void removeChild(RenderObject* child) OVERRIDE;
 
 protected:
-    virtual void styleDidChange(StyleDifference, const RenderStyle* oldStyle);
+    virtual void styleDidChange(StyleDifference, const RenderStyle* oldStyle) OVERRIDE;
 
 private:
-    virtual bool isRuby() const { return true; }
-    virtual const char* renderName() const { return "RenderRuby (inline)"; }
-    virtual bool createsAnonymousWrapper() const { return true; }
-    virtual void removeLeftoverAnonymousBlock(RenderBlock*) { ASSERT_NOT_REACHED(); }
+    virtual bool isRuby() const OVERRIDE { return true; }
+    virtual const char* renderName() const OVERRIDE { return "RenderRuby (inline)"; }
+    virtual bool createsAnonymousWrapper() const OVERRIDE { return true; }
 };
 
 // <ruby> when used as 'display:block' or 'display:inline-block'
 class RenderRubyAsBlock FINAL : public RenderBlockFlow {
 public:
-    RenderRubyAsBlock(Element*);
+    explicit RenderRubyAsBlock(Element&);
     virtual ~RenderRubyAsBlock();
 
-    virtual void addChild(RenderObject* child, RenderObject* beforeChild = 0);
-    virtual void removeChild(RenderObject* child);
+    Element& existingElement() const { return *RenderBlockFlow::element(); }
+
+    virtual void addChild(RenderObject* child, RenderObject* beforeChild = 0) OVERRIDE;
+    virtual void removeChild(RenderObject* child) OVERRIDE;
 
 protected:
-    virtual void styleDidChange(StyleDifference, const RenderStyle* oldStyle);
+    virtual void styleDidChange(StyleDifference, const RenderStyle* oldStyle) OVERRIDE;
 
 private:
-    virtual bool isRuby() const { return true; }
-    virtual const char* renderName() const { return "RenderRuby (block)"; }
-    virtual bool createsAnonymousWrapper() const { return true; }
-    virtual void removeLeftoverAnonymousBlock(RenderBlock*) { ASSERT_NOT_REACHED(); }
+    void element() const WTF_DELETED_FUNCTION;
+
+    virtual bool isRuby() const OVERRIDE { return true; }
+    virtual const char* renderName() const OVERRIDE { return "RenderRuby (block)"; }
+    virtual bool createsAnonymousWrapper() const OVERRIDE { return true; }
+    virtual void removeLeftoverAnonymousBlock(RenderBlock*) OVERRIDE { ASSERT_NOT_REACHED(); }
 };
 
 } // namespace WebCore
